# mageai_chatbot

./: .env.example  .gitignore  CLAUDE.md  MASTER_PROMPT.md  alembic.ini  pyproject.toml  requirements.txt
admin_ui/static/: admin.css  admin.js
admin_ui/templates/: analytics.html  apps.html  audit.html  base.html  chunks.html  dashboard.html  library.html  login.html  providers.html  sessions.html  settings.html  upload.html
alembic/: env.py
alembic/versions/: 000_baseline_existing_tables.py  001_add_analytics_tables.py  002_add_session_reviews.py  003_add_live_session_tracking.py  004_add_review_comment.py
config/: settings.py
config/apps/: _schema.yaml  limit-qty.yaml  rfq.yaml  whatsapp-notification.yaml
config/providers/: _schema.yaml  anthropic.yaml  cohere.yaml  deepseek.yaml  gemini.yaml  groq.yaml  mistral.yaml  ollama.yaml  openai.yaml
docs/: 01-quick-start.md  02-configuration.md  03-variants.md  04-theming.md  05-javascript-api.md  06-events.md  07-mobile.md  08-use-cases.md  09-deployment.md  APP_FLOW.md  README.md  postman_collection.json
scripts/: bulk_import.py  create_admin.py  inspect_chunks.py  reindex_app.py  test_provider.py
src/ai/: base.py  normaliser.py  registry.py  router.py
src/analytics/: models.py  service.py
src/api/: deps.py  main.py
src/auth/: audit.py  deps.py  models.py  service.py
src/core/: chat_debug.py  chroma.py  config.py  embedder.py  exceptions.py  tokenizer.py  utils.py
tests/: conftest.py  test_assembler.py  test_chunker.py  test_history.py  test_retriever.py
widget/: magecomp-chat.js  test.html
(+41 files in other folders)
